# cDetectron

./: .gitignore  CMakeLists.txt  README.md  cDetectron  design_ideas.txt  imgui.ini  main.cpp
assets/shaders/: advanced.frag  advanced.vert  basic.frag  basic.vert  lightSource.frag  model.frag  model.vert  plane.frag
include/: CameraManager.h  CoordSystem.h  GeneralBox.h  LightSource.h  Line.h  Mesh.h  Model.h  PlaneTextured.h  Setup.h  ShaderManager.h  TextureManager.h  stb_image.h
include/glad/: glad.h
include/imgui/: imgui_impl_opengl3.h
src/: glad.c  imgui_draw.cpp
